More cruft, example finalized

--- a/samples/quickstart/src/main/resources/shiro.ini
+++ b/samples/quickstart/src/main/resources/shiro.ini
@@ -22,6 +22,22 @@
 # For those that might not understand the references in this file, the
 # definitions are all based on the classic Mel Brooks' film "Spaceballs". ;)
 # =============================================================================
+[main]
+globalPermissionResolver = org.apache.shiro.authz.permission.WildcardPermissionResolver
+
+anonConfigurationSource=anonymous.AnonymousConfigurationSource
+anonConfigurationSource.enabled=true
+anonConfigurationSource.sessionCreationEnabled=false
+anonConfigurationSource.principal=anonymous
+anonConfigurationSource.roles=anonymous
+
+anonSubjectFactory=anonymous.AnonymousSubjectFactory
+anonSubjectFactory.anonymousConfigurationSource=$anonConfigurationSource
+anonSubjectFactory.permissionResolver=$globalPermissionResolver
+;anonSubjectFactory.rolePermissionResolver=$rolePermissionResolver
+
+securityManager.subjectFactory=$anonSubjectFactory
+securityManager.authorizer.permissionResolver = $globalPermissionResolver
 
 # -----------------------------------------------------------------------------
 # Users and their assigned roles
@@ -56,3 +72,6 @@ schwartz = lightsaber:*
 # The 'goodguy' role is allowed to 'drive' (action) the winnebago (type) with
 # license plate 'eagle5' (instance specific id)
 goodguy = winnebago:drive:eagle5
+
+[anon-roles]
+anonymous = posts:read
