More playful stuff

--- a/samples/quickstart/src/main/resources/shiro.ini
+++ b/samples/quickstart/src/main/resources/shiro.ini
@@ -28,7 +28,8 @@ globalPermissionResolver = org.apache.shiro.authz.permission.WildcardPermissionR
 anonConfigurationSource=anonymous.AnonymousConfigurationSource
 anonConfigurationSource.enabled=true
 anonConfigurationSource.sessionCreationEnabled=false
-anonConfigurationSource.principal=anonymous
+anonConfigurationSource.principal=darkhelmet
+anonConfigurationSource.originatingRealm=iniRealm
 anonConfigurationSource.roles=anonymous
 
 anonSubjectFactory=anonymous.AnonymousSubjectFactory
@@ -54,7 +55,7 @@ guest = guest, guest
 # my luggage!!!" ;)), and role 'president'
 presidentskroob = 12345, president
 # user 'darkhelmet' with password 'ludicrousspeed' and roles 'darklord' and 'schwartz'
-darkhelmet = ludicrousspeed, darklord, schwartz
+darkhelmet = ludicrousspeed, darklord, schwartz, anonymous
 # user 'lonestarr' with password 'vespa' and roles 'goodguy' and 'schwartz'
 lonestarr = vespa, goodguy, schwartz
 
@@ -72,6 +73,8 @@ schwartz = lightsaber:*
 # The 'goodguy' role is allowed to 'drive' (action) the winnebago (type) with
 # license plate 'eagle5' (instance specific id)
 goodguy = winnebago:drive:eagle5
+# anonymous role
+anonymous = anon:read
 
 [anon-roles]
 anonymous = posts:read
